trunk/Archive2/6b/b586ab29a80754/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <iostream> 
   ^
main.cpp:7:3: error: invalid preprocessing directive #Pragma
 # Pragma STDC fenv_access ON
   ^
main.cpp:12:59: error: unknown escape sequence: '\040'
     std :: cout  <<  "sqrt (100) ="  << sqrt ( 100 )  <<  ' \ n ' 
                                                           ^
main.cpp:12:59: warning: multi-character character constant [-Wmultichar]
main.cpp:13:53: error: unknown escape sequence: '\040'
               <<  "sqrt (2) ="  << sqrt ( 2 )  < <  ' \ n ' 
                                                     ^
main.cpp:13:53: warning: multi-character character constant [-Wmultichar]
main.cpp:14:75: error: unknown escape sequence: '\040'
               <<  "proporção áurea ="  <<  ( 1 + sqrt ( 5 ) ) / 2  <<  ' \ n ' ; 
                                                                           ^
main.cpp:14:75: warning: multi-character character constant [-Wmultichar]
main.cpp:16:61: error: unknown escape sequence: '\040'
     std :: cout  <<  "sqrt (-0) ="  < < sqrt ( - 0,0 )  <<  ' \ n ' ; 
                                                             ^
main.cpp:16:61: warning: multi-character character constant [-Wmultichar]
main.cpp:19:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "sqrt (-1,0) ="  << sqrt ( - 1 )  <<  ' \ n ' ; 
                                                            ^
main.cpp:19:60: warning: multi-character character constant [-Wmultichar]
main.cpp:21:77: error: unknown escape sequence: '\040'
         std :: cout  <<  "errno = EDOM"  <<  std :: strerror ( errno )  <<  ' \ n ' ; 
                                                                             ^
main.cpp:21:77: warning: multi-character character constant [-Wmultichar]
main.cpp: In function 'int principal()':
main.cpp:11:5: error: expected primary-expression before '/' token
     / / uso normal 
     ^
main.cpp:11:7: error: expected primary-expression before '/' token
     / / uso normal 
       ^
main.cpp:11:9: error: 'uso' was not declared in this scope
     / / uso normal 
         ^
main.cpp:11:13: error: expected ';' before 'normal'
     / / uso normal 
             ^
main.cpp:15:5: error: expected primary-expression before '/' token
     / / valores especiais 
     ^
main.cpp:15:7: error: expected primary-expression before '/' token
     / / valores especiais 
       ^
main.cpp:15:9: error: 'valores' was not declared in this scope
     / / valores especiais 
         ^
main.cpp:15:17: error: expected ';' before 'especiais'
     / / valores especiais 
                 ^
main.cpp:17:5: error: expected primary-expression before '/' token
     / / tratamento de erro 
     ^
main.cpp:17:7: error: expected primary-expression before '/' token
     / / tratamento de erro 
       ^
main.cpp:17:9: error: 'tratamento' was not declared in this scope
     / / tratamento de erro 
         ^
main.cpp:17:20: error: expected ';' before 'de'
     / / tratamento de erro 
                    ^
main.cpp:19:5: error: 'cout' is not a member of 'std'
     std :: cout  <<  "sqrt (-1,0) ="  << sqrt ( - 1 )  <<  ' \ n ' ; 
     ^
main.cpp:20:26: error: 'se' was not declared in this scope
     se ( errno  ==  EDOM ) 
                          ^
main.cpp:21:9: error: expected ';' before 'std'
         std :: cout  <<  "errno = EDOM"  <<  std :: strerror ( errno )  <<  ' \ n ' ; 
         ^
main.cpp:23:9: error: expected ';' before 'std'
         std: : cout  <<  "FE_INVALID levantou \ n " ; 
         ^
main.cpp:24:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
